fix tags flex wrap

--- a/app/blog/page.module.scss
+++ b/app/blog/page.module.scss
@@ -1,6 +1,6 @@
 .tags {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   gap: 1rem;
 }
 
